# stow-install

./: .bashrc_stow  .gitignore  .stow-global-ignore  README.md  pyproject.toml  setup_stow_install.sh  stow-install
.github/workflows/: python-publish.yml
bash_scripts/: stow_install_autotools.sh  stow_install_cmake.sh  stow_install_cmake_bootstrap.sh  stow_install_make.sh  stow_install_meson.sh
tests/: __init__.py  conftest.py  helpers.py  test_install.py  test_install_http.py  test_setup.py
tests/fixtures/dummy-1.0/: dummy
tests/fixtures/src_dummy-1.0/dummy-1.0/: Makefile
