[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "stow-install"
version = "0.1.0"
description = "Download, compile, and install software using GNU Stow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    {name = "Istvan Sarandi", email = "istvan.sarandi@gmail.com"},
]
keywords = ["stow", "compile", "install", "build", "autotools", "cmake", "meson"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "stow-python",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/isarandi/stow-install"

[tool.setuptools]
py-modules = []
script-files = ["bin/stow-install"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
